<resources>
    <string name="app_name">Daily Eating Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_progress">View Progress</string>
    <string name="view_trends">View Trends</string>
    <string name="set_goals">Set Goals</string>


    <string name="login">Login</string>
    <string name="create_acc">Create an account</string>
    <string name="welcome_back">Welcome back to the app</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="keep_signed_in">Keep me signed in</string>


    <string name="email_address">Email Address</string>
    <string name="signup">Sign up</string>

    <string-array name="main_goals">
        <item>To lose weight</item>
        <item>To keep fit</item>
        <item>To build muscles</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_reset_pass">Reset_Pass_Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>