<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.loginactivity.MainActivity1">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_profile"
        android:orderInCategory="100"
        android:title="@string/update_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_progress"
        android:orderInCategory="100"
        android:title="@string/view_progress"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_goals"
        android:orderInCategory="100"
        android:title="@string/set_goals"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_trends"
        android:orderInCategory="100"
        android:title="@string/view_trends"
        app:showAsAction="never" />




</menu>